# orcxx-rs

./: .gitmodules  CHANGELOG.md  Cargo.toml  README.md  build.rs
examples/: to_json.rs
orcxx/: Cargo.toml  build.rs
orcxx/examples/: prettify_json.rs  to_json.rs
orcxx/src/: cpp-utils.hh  deserialize.rs  errors.rs  int128.rs  kind.rs  lib.rs  memorypool.rs  parallel_row_iterator.rs  reader.rs  row_iterator.rs  structured_reader.rs  to_json.rs  vector.rs
orcxx/tests/: read_apache.rs  reader.rs  test_vector.rs
orcxx_derive/: Cargo.toml
orcxx_derive/src/: lib.rs
orcxx_derive/tests/: decimal.rs  kinds.rs  nulls.rs  parallel_row_iterator.rs  read_apache.rs  test1.rs  test_codegen.rs  timestamp.rs
orcxx_readme/: Cargo.toml
orcxx_readme/src/: lib.rs
src/: cpp-utils.hh  kind.rs  lib.rs  memorypool.rs  reader.rs  structured_reader.rs  to_json.rs  utils.rs  vector.rs
tests/: read_apache.rs  reader.rs  structured_reader.rs
