[workspace]

members = [
    "orcxx",
    "orcxx_derive",
    "orcxx_readme",
]


[workspace.package]
version = "0.2.2"
authors = [
    "Software Heritage developers <swh-devel@inria.fr>"
]
rust-version = "1.63"
readme = "README.md"
homepage = "https://gitlab.softwareheritage.org/swh/devel/orcxx-rs"
repository = "https://gitlab.softwareheritage.org/swh/devel/orcxx-rs"
keywords = ["orc", "apache-orc", "proc-macros"]
categories = ["encoding", "parser-implementations"]

[workspace.dependencies]
orcxx = { version = "0.2.2", path = "orcxx/" }
orcxx_derive = { version = "0.2.2", path = "orcxx_derive/" }



[profile.release]
debug = 1
