[package]
name = "orcxx"
version = "0.1.0"
authors = [
    "Software Heritage developers <swh-devel@inria.fr>"
]
rust-version = "1.63"
description = "Rust bindings for the official C++ library for Apache ORC"
homepage = "https://gitlab.softwareheritage.org/swh/devel/orcxx-rs"
repository = "https://gitlab.softwareheritage.org/swh/devel/orcxx-rs"
keywords = ["orc", "apache-orc"]
categories = ["api-bindings", "encoding", "parser-implementations"]

# orcxx itself is GPL.
#
# Apache-2.0 for Apache ORC, BSD for protobuf and snappy, Zlib for zlib.
# See orc/LICENSE for the text of these licenses
license = "GPL-3.0-or-later AND Apache-2.0 AND BSD-3-Clause AND Zlib"

build = "build.rs"
exclude = [
    "orc/c++/test/",
    "orc/docker/",
    "orc/examples/",
    "orc/java/",
    "orc/site/",
    "orc/tools/",
    "orc/.*",
]

[features]
# Defines a 'to_json' module which allows converting ORC files to JSON objects
json = ["dep:json", "dep:chrono"]

[dependencies]
cxx = "1.0"
json = { version = "0.12.4", optional = true }
chrono = { version = "0.4.26", optional = true }
# TODO: Make rust_decimal optional
rust_decimal = "1.30.0"
unsafe_unwrap = "0.1.0"

[build-dependencies]
cxx-build = "1.0"

[dev-dependencies]
flate2 = "1.0"
json = "0.12.4"
pretty_assertions = "1.3.0"
tempfile = "3.6.0"
