[package]
name = "orcxx_derive"
description = "Procedural macros to deserialize structures from Apache ORC using orcxx."
version.workspace = true
authors.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

license = "GPL-3.0-or-later"

[lib]
proc-macro = true

[features]
chrono = ["dep:chrono"]

[dependencies]
chrono = { version = "0.4.26", optional = true }
orcxx.workspace = true
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
unsafe_unwrap = "0.1.0"

[dev-dependencies]
rust_decimal = "1.30.0"
rust_decimal_macros = "1.30.0"
