[package]
name = "orcxx_readme"
description = "Pseudo-crate to run examples from the README."
version.workspace = true
authors.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

license = "GPL-3.0-or-later"

[lib]

[dependencies]
orcxx.workspace = true
orcxx_derive.workspace = true
